experiement_output/error_log/nondex-tekintian-java_mail.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task695/wd/NonDex-plugin-test/github.com/tekintian/java_mail/src/main/java/cn/tekin/controller/SendMail.java:32: error: method getRealPath in interface ServletContext cannot be applied to given types;
            resp.setHeader("Refresh","3;url="+ req.getServletContext().getRealPath()+"/index.jsp");
                                                                      ^
  required: String
  found: no arguments
  reason: actual and formal argument lists differ in length
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 2s
